--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
 @keyframes movimento {
     0%{
         opacity: 0%;
@@ -31,7 +31,6 @@ header {
 }
 
 a{
-    text-align: center;
     text-decoration: none;
     color: #35ED35;
 }
@@ -43,7 +42,7 @@ a{
 }
 
 .nav span{
-    padding: 2.2rem 4rem;
+    padding: 2.2rem 3rem;
     font-size: 1.2rem;
 }
 
@@ -63,6 +62,7 @@ header img{
     height: 100%;
     display: flex;
     justify-content: space-between;
+    position: relative;
 }
 
 main {
@@ -100,29 +100,27 @@ main {
 }
 
 .btn {
-    background: transparent;
-    border: none;
     outline: none;
+    font-size: 1.2rem;
+    padding: 0.5rem 1rem;
+    color: #1E1928;
+    border-radius: 0.2rem;
+    background: #35ED35;
+    border: 0.1rem solid #35ED35;
+    width: max-content;
+    transition: 200ms;
+}
+
+.btn:hover {
     color: #35ED35;
+    background: #1E1928;
 }
 
-.span4 {
-    width: 11rem;
-    padding: 0.4rem 1.5rem;
-    background: #2b243a;
-    border-radius: 2rem;
-    transition: 200ms;
-}
-
-.sign {
-    width: 15rem;
-    padding: 1rem 1.5rem;
-    background: #2b243a;
-    border-radius: 2rem;
-    transition: 200ms;
-}
-
-.sign:hover,
-.span4:hover {
-    box-shadow: 0px 0px 7px 1px #35ED35;
+.icons{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    top: 40%;
+    right: 0.8rem;
 }
