--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,21 @@
         transform: translate(0, 0)
     }
 }
+@keyframes animationImg {
+    0%{
+        opacity: 0%;
+        transform: scale(1);
+    
+    }
+    80%{
+        opacity: 50%;
+        transform: scale(1.2);
+    }
+    100%{
+        opacity: 100%;
+        transform: scale(1);
+    }
+}
 *{
     margin: 0;
     padding: 0;
@@ -26,7 +41,7 @@ header{
     height: 10vh;
 }
 h1{
-    animation: movimento 600ms ease-out;
+    animation: movimento 2s ease-out;
 }
 p{
     animation: movimento 400ms ease-out;
@@ -40,6 +55,7 @@ p{
     top: 50%;
     transform: translateX(-50%);
 }
-@media (max-width: 767.98px){
-
+.myphoto{
+    border-radius: 31% 69% 70% 30% / 55% 47% 53% 45%;
+    animation: animationImg 1s ease-out;
 }
