--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ p{
     transform: translateX(-50%);
 }
 .myphoto{
-    border-radius: 31% 69% 70% 30% / 55% 47% 53% 45%;
+    /* border-radius: 31% 69% 70% 30% / 55% 47% 53% 45%; */
+    border-radius: 50%;
     animation: animationImg 1s ease-out;
 }
