--- a/css/style.css
+++ b/css/style.css
@@ -44,18 +44,19 @@ html{
 }
 body{
     max-width: 100vw;
+    min-height: 100vh;
 }
 nav{
-    height: 15vh;
+    height: 10vh !important;
 }
 main{
-    height: 70vh;
+    min-height: 80vh !important;
 }
 footer{
-    height: 5vh;
+    height: 10vh !important;
 }
 .skills, .repositorios, .contatos{
-    display: none;
+    /* display: none; */
 }
 h1{
     animation: movimento 2s ease-out;
@@ -68,6 +69,10 @@ p{
 }
 .card{
     margin: 0.5rem 0;
+    z-index: -1;
+}
+h1{
+    z-index: -1;
 }
 .icons{
     position: fixed;
