--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ html{
 body{
     max-width: 100vw;
     min-height: 100vh;
+    background-color: rgba(235, 235, 235, 0.705) !important;
 }
 nav{
     height: 10vh !important;
@@ -59,10 +60,10 @@ footer{
     /* display: none; */
 }
 h1{
-    animation: movimento 2s ease-out;
+    animation: movimento 600ms ease-in-out;
 }
 p{
-    animation: movimento 1s ease-in;
+    animation: movimento 300ms ease-in-out;
 }
 .nav-link{
     cursor: pointer;
@@ -81,9 +82,8 @@ h1{
     transform: translateX(-50%);
 }
 .myphoto{
-    /* border-radius: 31% 69% 70% 30% / 55% 47% 53% 45%; */
     border-radius: 50%;
-    animation: animationImg 1s ease-out;
+    animation: animationImg 800ms ease-in-out;
 }
 .repos-link:hover{
     color: black !important;
@@ -105,10 +105,18 @@ h1{
     background-color: rgba(194, 194, 194, 0.509);
     animation: outro 1s ease;
 }
-.nav-item > .nav-link.active{
-    box-shadow: 0 1px 0 0 white;
 
+@media only screen and (min-width: 600px) {
+    .nav-item > .nav-link.active{
+        box-shadow: 0 1px 0 0 white;
+    
+    }
+    .nav-item > .nav-link:hover{
+        box-shadow: 0 2px 0 0 white;
+    }
 }
-.nav-item > .nav-link:hover{
-    box-shadow: 0 2px 0 0 white;
+@media only screen and (max-width: 600px) {
+    .myphoto{
+        width: 250px;
+    }
 }
